Forward events to the apps grid view if they are in the same y-region

This allows for scrolling on the very edge to paginate the apps grid first,
before closing the launcher. By limiting the Y-region, you can still close
the launcher with a drag from the top.

Bug: 869642
Change-Id: Ice9759a2e1dd0c3beb6019a00b570bba37e2a7a6
Reviewed-on: https://chromium-review.googlesource.com/1175454
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Commit-Queue: Kevin Strohbehn <ginko@google.com>
Cr-Commit-Position: refs/heads/master@{#584271}
Former-commit-id: cdf2fc776db0732e0fcf1f6b002464f489c5eec8